Add simple style for all pages

--- a/src/sass/common/_colors.scss
+++ b/src/sass/common/_colors.scss
@@ -1,1 +1,7 @@
-$redColor: "red";
+$white: #fff;
+$lightWhite: #e8e8f2;
+$black: #000;
+$violet: #6459e3;
+$violetDark: hsl(245, 52%, 58%);
+$whiteBlue: #42ade2;
+$whiteBlueBright: hsl(200, 61%, 50%)
